fix tests and stylelint not being run, sass seems to work with TypeScript and loading with import as well

--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -1,9 +1,9 @@
-$font-stack: Helvetica, sans-serif;
-//$primary-color: rgb(209, 98, 8);
-$primary-color: rgb(190, 130, 130);
-
 body {
-  font            : 100% $font-stack;
-  color           : $primary-color;
-  background-color: rgb(4, 0, 55);
+  font      : 100% Helvetica, sans-serif;
+  color     : rgb(209, 98, 8);
+  background: rgb(4, 0, 55);
+}
+
+.red {
+  color: red;
 }
